# fbksd-package

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
denoisers/: CMakeLists.txt
denoisers/AdptBox/: CMakeLists.txt
denoisers/Box/: CMakeLists.txt  info.json  main.cpp
denoisers/GEM/: CMakeLists.txt  README.txt  info.json
denoisers/GEM/src/: bandwidth.cpp  bandwidth.h  denoiser.cpp  denoiser.h  error.h  film.cpp  film.h  gaussian.cpp  gaussian.h  geometry.h  kernel2d.cpp  kernel2d.h  main.cpp  main_sampler.cpp  memory.cpp  montecarlo.cpp  montecarlo.h  parallel.cpp  random.cpp  random.h  rng.cpp  rng.h  sampler.cpp  sampler.h  smooth.cpp  smooth.h  stratified.cpp  stratified.h
denoisers/Gaussian/: CMakeLists.txt  info.json
denoisers/Gaussian/src/: main.cpp
denoisers/LBF/: CMakeLists.txt  README.txt  info.json
denoisers/LBF/src/: LBF-mf.cpp  main.cpp
denoisers/LBF/src/LBF/: CudaFeatureFuncs.cu  CudaWrappers.cuh  FeatureExtractor.cpp  FeatureExtractor.h  Globals.h  LBF.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  Utilities.cpp  Utilities.h
denoisers/LBF/src/SampleWriter/: Globals.h  SampleWriter.cpp  SampleWriter.h
denoisers/LWR/: CMakeLists.txt  README.txt  info.json
denoisers/LWR/src/: film.cpp  film.h  gaussian.cpp  geometry.h  lwr_film.cpp  lwr_film.h  lwr_renderer.cpp  lwr_renderer.h  lwr_sampler.cpp  lwr_sampler.h  lwrr.cpp  lwrr_setting.h  main-mf.cpp  main.cpp  main_ns.cpp  montecarlo.cpp  montecarlo.h  parallel.cpp  parallel.h  pbrt.h  rng.cpp  sampler.cpp  sampler.h
denoisers/Mitchell/: CMakeLists.txt  info.json
denoisers/Mitchell/src/: main.cpp
denoisers/NFOR/: CMakeLists.txt  NFOR_pseudocode.py  info.json
denoisers/NFOR/src/: NFOR.cpp  NFOR.h  featurefilter.cu  featurefilter.h  film.cpp  film.h  imageio.cpp  imageio.h  main.cpp  multifilm.cpp  multifilm.h  nlm.cpp  nlm.h  utils.h
denoisers/NLM/: CMakeLists.txt  README.txt  info.json
denoisers/NLM/src/: dualfilm.cpp  dualfilm.h  dualsampler.cpp  dualsampler.h  film.cpp  film.h  geometry.h  image.cpp  image.h  kernel2d.cpp  kernel2d.h  main.cpp  montecarlo.cpp  montecarlo.h  nlmdenoiser.cpp  nlmdenoiser.h  nlmkernel.cu  nlmkernel.h  parallel.cpp  pbrt.h  random.cpp  random.h  rng.cpp  rng.h  sampler.cpp  sampler.h  stratified.cpp  stratified.h
denoisers/RDFC/: CMakeLists.txt  README.txt  info.json
denoisers/RDFC/src/: box.cpp  callgraph.dot  featurefilter.cu  featurefilter.h  film.cpp  film.h  gaussian.cpp  imageio.cpp  main.cpp  montecarlo.cpp  montecarlo.h  multifilm.cpp  multifilm.h  multisampler.cpp  multisampler.h  parallel.cpp  parallel.h  pbrt.h  random.cpp  random.h  rng.cpp  rng.h  sampler.cpp  sampler.h
denoisers/RHF/: CMakeLists.txt  Makefile  imageHisto.cpp  imageHisto.h  info.json  libdenoising.cpp  memory.cpp  mitchell.cpp  mitchell.h  parallel.cpp  pbrt.h  rhf.cpp
denoisers/RPF/: CMakeLists.txt  info.json
denoisers/RPF/src/: ExrUtilities.cpp  ExrUtilities.h  Globals.cpp  Globals.h  Main.cpp  MutualInformationWrapper.cpp  MutualInformationWrapper.h  PreComputeGaussian.cpp  PreComputeGaussian.h  RPF.cpp  RPF.h  SSE_Math.cpp  SSE_Math.h  SSE_Wrapper.cpp  SSE_Wrapper.h  SampleSet.cpp  SampleSet.h  Timer.h  errcheck.inc  main.cpp  main_ns.cpp  timer.cpp  timer.h
denoisers/RPF/src/SampleWriter/: Globals.h  SampleWriter.cpp  SampleWriter.h
denoisers/SBF/: CMakeLists.txt  CrossBilateralFilter.cpp  CrossBilateralFilter.h  CrossNLMFilter.cpp  CrossNLMFilter.h  README.txt  ReconstructionFilter.h  SBFCommon.h  TwoDArray.h  VectorNf.h  film.h  filter.cpp  filter.h  fmath.hpp  imageio.cpp  imageio.h  info.json  main-mf.cpp  main.cpp  main_ns.cpp  memory.cpp  memory.h  montecarlo.cpp  montecarlo.h  parallel.cpp  parallel.h  pbrt.h  rng.cpp  rng.h  sampler.cpp  sampler.h  sbf.cpp  sbf.h  sbfimage.cpp  sbfimage.h  sbfrenderer.cpp  sbfrenderer.h  sbfsampler.cpp  sbfsampler.h
denoisers/SBF/filters/: box.cpp  box.h  gaussian.cpp  gaussian.h  mitchell.cpp  mitchell.h  sinc.cpp  sinc.h  triangle.cpp  triangle.h
renderers/: CMakeLists.txt
samplers/: CMakeLists.txt
samplers/Independent/: CMakeLists.txt  info.json  main.cpp
samplers/LDSampler/: CMakeLists.txt  info.json  ldsampler.h  main.cpp  random.cpp  sampler.cpp
samplers/Sobol/: CMakeLists.txt  info.json  main.cpp  qmc.cpp  qmc.h  sampler.h  sobol.h  sobolseq.h  utils.h
samplers/Stratified/: CMakeLists.txt  info.json  main.cpp  random.h  stratified.h  utils.cpp  utils.h
